@@ -2,6 +2,8 @@ package br.com.letscode.dataproject.product.service;
 
 
 import java.util.List;
+import java.util.stream.Collectors;
+
 import org.springframework.stereotype.Service;
 
 import br.com.letscode.dataproject.product.dto.ProductResponse;
@@ -15,6 +17,6 @@ public class ProductService {
     private final ProductRepository productRepository;
 
     public List<ProductResponse> findAll() {
-        return productRepository.findAll().stream().map(ProductResponse::convert).toList();
+        return productRepository.findAll().stream().map(ProductResponse::convert).collect(Collectors.toList());
     }
 }
